Fixing table footer white space

--- a/Webclient/src/app/template/table/module/table_footer/component/footer_pager/footer_pager.scss
+++ b/Webclient/src/app/template/table/module/table_footer/component/footer_pager/footer_pager.scss
@@ -16,8 +16,10 @@ $buttonSize: 20px;
 
     div:nth-child(3) {
         text-align: center;
-        width: 60px;
+        min-width: 60px;
         cursor: default;
+        white-space: nowrap;
+        padding-right: $spacing;
     }
 
     .firstPage {
